--- a/index.html
+++ b/index.html
@@ -427,6 +427,9 @@
     </style>
 </head>
 <body>
+    <footer>
+        <p>东亚服务器图片加载可能很慢请耐心等待 | 如有补充请联系<span onclick="copyToClipboard('s@mcdr.top')" style="color: aqua;cursor: copy;">s@mcdr.top</span> | 2024级十班建立 | <span id="footer-count">1221</span> 张照片 | 共计 <span id="footer-count">2.36GB(2,539,558,921 字节)</span></p>
+    </footer>
     <div class="container">
         <header>
             <h1><i class="fas fa-camera-retro"></i> 照片画廊</h1>
